Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@ Subordinado<p></p>
 </td>
   <td valign="top" width="481">
 <div>
-General comando zero ou mais sibordinados<p></p>
+General comando zero ou mais subordinados<p></p>
 </div>
 </td>
  </tr>
