Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
 
 
       <section id="main_content">
-        <div>
+        <p>Caso não possam ser vistas as imagens:</p>
+
+<ul>
+<li>as mesmas se encontram no seguinte link:
+         - <a href="https://github.com/izabely-furtado/GameNave/tree/master/Diagramas">https://github.com/izabely-furtado/GameNave/tree/master/Diagramas</a>
+</li>
+</ul>
+
+<div>
 Sumário<p></p>
 </div>
 
